Commit : commit après création et mise en forme pour web des composants header et footer

--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -18,6 +18,7 @@ $fond-12:  Rgba(138, 172, 194,0.5);
 $fond-13:  Rgba(106, 112, 117,0.5);
 $fond-21 : #FFFFFF ;
 $fond-22 : #D1D1D1;
+$fondfooter:#81A2E3;
 $black: #282828;
 $white: #FFFFFF;
 $green : #BAEE0C;
