--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,5 @@
 // importation des fichiers scss pour les composants et les pages
 @import "./settings";
 @import "./autres/header";
-@import "./autres/navigation"
+@import "./autres/navigation";
+@import "./autres/footer";
