Commit aprés construction page Home, fichier data du contenu des autres pages et construction de la page entretien

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -3,3 +3,7 @@
 @import "./autres/header";
 @import "./autres/navigation";
 @import "./autres/footer";
+@import "./pages/home";
+@import "./autres/presentation";
+@import "./autres/carteservice";
+@import "./pages/pageautres.scss"
