Commit après création de la navigation dans les pages et de la mise en forme de la page contact

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,4 +6,6 @@
 @import "./pages/home";
 @import "./autres/presentation";
 @import "./autres/carteservice";
-@import "./pages/pageautres.scss"
+@import "./pages/pageautres.scss";
+@import "./autres/occasion";
+@import "./pages/contact";
