--- a/client/src/styles/pages/_contact.scss
+++ b/client/src/styles/pages/_contact.scss
@@ -28,6 +28,7 @@
   margin : 20px;
    .itemcorps {
     width: 80%;
+    height: 100%;
     display: flex;
     align-items: center; /* Centre verticalement */
     justify-content: center; /* Centre horizontalement */
