Commit aprés mise en forme page liste des vehicules et programmation des filtres

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,4 +9,6 @@
 @import "./pages/pageautres.scss";
 @import "./autres/occasion";
 @import "./pages/contact";
-@import "./composant/carteamail"
+@import "./composant/carteamail";
+@import "./pages/vehicules";
+@import './autres/filtrevoiture'
