Commit aprés construction de la page fiche d'un véhicule

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -11,4 +11,6 @@
 @import "./pages/contact";
 @import "./composant/carteamail";
 @import "./pages/vehicules";
-@import './autres/filtrevoiture'
+@import './autres/filtrevoiture';
+@import './autres/cartevehicule';
+@import './pages/fichevehicule';
