--- a/client/src/styles/pages/_vehicules.scss
+++ b/client/src/styles/pages/_vehicules.scss
@@ -30,6 +30,7 @@
     }
     .carteoccase {
       grid-area: affichagecarte;
+      margin-bottom: 40px;
       padding: 10px;
       display: grid;
       grid-template-columns: repeat(
