Commit : mise en place del agestion des équipement pour un vehicule, saisie nouvel equipement et relation vehicule equipement

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -16,3 +16,5 @@
 @import './pages/fichevehicule';
 @import './composant/carteconnexion';
 @import './autres/modalecartevehicule';
+@import './autres/modalecartesEO';
+@import './autres/newEO';
