--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -17,4 +17,6 @@
 @import './composant/carteconnexion';
 @import './autres/modalecartevehicule';
 @import './autres/modalecartesEO';
-@import './autres/newEO';
+@import './autres/newEO';;
+@import './composant/agentModale';
+@import './autres/horaire';
