--- a/client/src/styles/autres/_footer.scss
+++ b/client/src/styles/autres/_footer.scss
@@ -5,14 +5,33 @@
   display: flex;
   justify-content: center; /* Centre horizontalement */
   align-items: center; /* Centre verticalement */
+  @media (max-width: 420px) {
+    height: 500px;
+  }
   .containerfooter {
     height: 80%;
     width: 100%;
-    display: flex;
+    display: grid;
     justify-content: space-between;
+    grid-template-columns: 20% 1fr 30%;
+grid-template-rows: 100%;
+grid-template-areas:
+"logof adressef horairef"
+;
+@media (max-width: 420px) {
+  height : 100%;
+  display: grid;
+    grid-template-columns: 100%;
+grid-template-rows: 33% 1fr 30%;
+grid-template-areas:
+  "horairef"
 
+ "adressef"
+  "logof"
+}
     .logofooter {
-      width: 20%;
+      grid-area: logof;
+      width: 100%;
       min-height: 80px;
       display: flex;
       flex-direction: column; /* Définit la direction en colonne */
@@ -39,7 +58,8 @@
       }
     }
     .adressefooter {
-      width: 60%;
+      grid-area: adressef;
+      width: 100%;
       height: 100%;
       margin: 0 auto;
       display: flex;
@@ -54,14 +74,17 @@
       }
     }
     .horairefooter {
-      width: 30%;
+      grid-area: horairef;
+      width: 100%;
       height: 100%;
-      margin: 0 auto;
       display: flex;
       flex-direction: column;
       justify-content: center; /* Centre verticalement */
       text-align: center;
-
+@media (max-width: 420px) {
+   margin-top: 15px;
+   margin-top: 15px;
+  }
     }
   }
 }
