--- a/client/src/styles/autres/_navigation.scss
+++ b/client/src/styles/autres/_navigation.scss
@@ -7,7 +7,12 @@
   justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
-
+@media (max-width: 420px) {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+}
   div {
     width: 120px;
     text-align: center;
@@ -16,6 +21,10 @@
       font-size: 15px;
     a {
       color: $black;
+    }
+    @media (max-width: 420px) {
+      width: 100%;
+         font-size: 10px;
     }
   }
 }
