--- a/client/src/styles/autres/_modalecartevehicule.scss
+++ b/client/src/styles/autres/_modalecartevehicule.scss
@@ -25,6 +25,7 @@
 // spécifique à ce composant :
 
 .mainmodalecartevehicule {
+background-color: rgba(255, 255, 255, 0);
   min-width: 390px;
   max-width: 390px;
   height: 900px;
