--- a/client/src/styles/autres/_occasion.scss
+++ b/client/src/styles/autres/_occasion.scss
@@ -1,8 +1,22 @@
 .occasepresentation {
   width: 90%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
+  grid-template-areas:
+  "boutonve  presentat";
 
+@media (max-width: 420px) {
+  display: grid;
+  height: 100%;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr 30%;
+  grid-template-areas:
+  "presentat" "boutonve" ;
+  place-items: center; 
+}
   .containerbouton {
+    grid-area:boutonve;
     margin-left: 20%;
     margin-right: 20%;
     display: flex;
@@ -29,5 +43,8 @@
     .boutonoccase:hover {
       color: $black; /* Nouvelle couleur verte au survol */
     }
+  }
+  .containerpresentat{
+    grid-area:presentat;
   }
 }
