--- a/client/src/styles/composant/_agentModale.scss
+++ b/client/src/styles/composant/_agentModale.scss
@@ -2,7 +2,7 @@
 
   width: 370px;
   height: 400px;
-  background: rgba(211, 214, 234, 0.6);
+  background: rgb(255, 255, 255,0.7);
   border: 5px rgba(128, 128, 128, 0.631) solid;
   border-radius: 20px;
   display: grid;
@@ -19,7 +19,7 @@
     height: 100%;
     width: 100%;
     border-radius: 20px 20px 0px 0px;
-    background: rgb(50, 151, 206, 0.61);
+    background: rgb(129, 162, 227,0.7);
     display: grid;
     grid-template-columns: 70% 10% 10% 10%;
     grid-template-rows: 100%;
