--- a/client/src/styles/composant/_carteamail.scss
+++ b/client/src/styles/composant/_carteamail.scss
@@ -1,12 +1,22 @@
 .carteEmail {
-width: 100%;
+width: 400px;
   display: flex;
   flex-direction: column;
+  .objetDemande {
+    margin-left: 10px;
+    width: 90%;
+    font-size: 12px;
+    margin-top: 20px;
+        border  : 1px solid $black;
+    border-radius: 20px;
+  }
   input {
     margin: 10px;
+    padding: 10px;
     height : 30px;
     width : 60%;
     border  : 1px solid $black;
+    border-radius: 20px;
   }
   .email-content {
     width: 100%;
@@ -23,6 +33,7 @@ width: 100%;
      margin: 10px;
  padding:5px;
  border  : 1px solid $black;
+ border-radius: 20px;
   }
   .zonebouton {
     display: flex;
