--- a/client/src/styles/composant/_carteconnexion.scss
+++ b/client/src/styles/composant/_carteconnexion.scss
@@ -4,7 +4,7 @@ width: 500px;
 height: 300px ;
   display: grid;
   border: 1px blue solid;
-  background: rgba(211, 214, 234,0.6);
+  background: rgb(255, 255, 255,0.7);
   box-shadow: 10px 10px 6px #00000073;
   border-radius: 20px;
   font-size: 20px;
