--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -20,4 +20,5 @@
 @import './autres/newEO';;
 @import './composant/agentModale';
 @import './autres/horaire';
-@import './autres/blog'
+@import './autres/blog';
+@import './autres/serviceAffichage';
