--- a/client/src/styles/composant/_carteamail.scss
+++ b/client/src/styles/composant/_carteamail.scss
@@ -2,6 +2,10 @@
 width: 400px;
   display: flex;
   flex-direction: column;
+     @media (max-width: 420px) {
+      width: 360px;
+    }
+
   .objetDemande {
     margin-left: 10px;
     width: 90%;
@@ -9,6 +13,7 @@ width: 400px;
     margin-top: 20px;
         border  : 1px solid $black;
     border-radius: 20px;
+
   }
   input {
     margin: 10px;
@@ -63,6 +68,7 @@ width: 400px;
     }
   }
 .messagecontact {
+  text-align: center;
     font-size: 12px;
     background: $red;
 }
